# movie-recommendation-demo

./: .gitignore  README.md  app.py  pyproject.toml  train.py
crawler/crawler/: formatters.py  items.py  pipelines.py  settings.py
crawler/crawler/spiders/: jtnews.py
